[package]
name = "rust_cryptocurrencies_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
rust_decimal = { version = "1.36.0", features = ["default"] }
log4rs = { version = "1.3.0", features = ["console_writer"] }
log = "0.4.22"
